--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,12 @@
     ],
     "autoload": {
         "psr-4": {
-            "Symfony\\UX\\FSM\\CKEditor\\": "src/"
+            "FSM\\Symfony\\UX\\CKEditor\\": "src/"
         }
     },
     "require": {
         "php": ">=7.2.5",
+        "ext-json": "*",
         "symfony/config": "^4.4.17|^5.0|^6.0",
         "symfony/dependency-injection": "^4.4.17|^5.0|^6.0",
         "symfony/form": "^4.4.17|^5.0|^6.0",
